// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileSidebar should not render correctly 1`] = `
<ProfileSidebar
  email=""
  image=""
  username=""
>
  <div
    className="sidebar"
  >
    <div
      className="avatar-div"
    >
      <Avatar
        className="avatar-xl"
        url="https://res.cloudinary.com/nedy123/image/upload/v1557149386/avatar_pupqrh.svg"
      >
        <img
          alt="avatar"
          className="avatar avatar-xl"
          src="https://res.cloudinary.com/nedy123/image/upload/v1557149386/avatar_pupqrh.svg"
        />
      </Avatar>
    </div>
    <p
      className="text-center username"
    />
    <p
      className="text-center email"
    />
    <div
      className="follow-div"
    >
      <div
        className="follow-stats"
      >
        <p
          className="text-center count"
        >
          0
        </p>
        <p
          className="text-center type"
        >
          Followings
        </p>
      </div>
      <div>
        <p
          className="text-center count"
        >
          0
        </p>
        <p
          className="text-center type"
        >
          Followers
        </p>
      </div>
    </div>
    <div
      className="profilebtn-container"
    />
    <hr
      className="sidebar-hr"
    />
  </div>
</ProfileSidebar>
`;

exports[`ProfileSidebar should render correctly 1`] = `
<ProfileSidebar
  email=""
  followers={Array []}
  followings={Array []}
  image=""
  username=""
>
  <div
    className="sidebar"
  >
    <div
      className="avatar-div"
    >
      <Avatar
        className="avatar-xl"
        url="https://res.cloudinary.com/nedy123/image/upload/v1557149386/avatar_pupqrh.svg"
      >
        <img
          alt="avatar"
          className="avatar avatar-xl"
          src="https://res.cloudinary.com/nedy123/image/upload/v1557149386/avatar_pupqrh.svg"
        />
      </Avatar>
    </div>
    <p
      className="text-center username"
    />
    <p
      className="text-center email"
    />
    <div
      className="follow-div"
    >
      <div
        className="follow-stats"
      >
        <p
          className="text-center count"
        >
          0
        </p>
        <p
          className="text-center type"
        >
          Followings
        </p>
      </div>
      <div>
        <p
          className="text-center count"
        >
          0
        </p>
        <p
          className="text-center type"
        >
          Followers
        </p>
      </div>
    </div>
    <div
      className="profilebtn-container"
    />
    <hr
      className="sidebar-hr"
    />
  </div>
</ProfileSidebar>
`;
